tests/conc/reject/parfor_read_acc.ty
fn main():
    acc := 0
    parallel for i in range(10):
        acc = acc + i
        print(str(acc))
